// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should not render zero badge when show-zero-badge prop is false 1`] = `
<div>
  <div
    class="rc-tabs rc-tabs--line"
  >
    <div
      class="rc-tabs__wrap"
    >
      <div
        class="rc-tabs__nav rc-tabs__nav--line"
        role="tablist"
      >
        <div
          aria-selected="true"
          class="rc-tab rc-tab--active"
        >
          <div
            class="rc-badge__wrapper"
          >
            <span
              class="rc-tab__text rc-tab__text--ellipsis"
            />
            <div
              class="rc-badge rc-badge--top-right rc-badge--fixed"
            >
              0
            </div>
          </div>
        </div>
        <div
          aria-selected="false"
          class="rc-tab"
        >
          <div
            class="rc-badge__wrapper"
          >
            <span
              class="rc-tab__text rc-tab__text--ellipsis"
            />
          </div>
        </div>
        <div
          class="rc-tabs__line"
        />
      </div>
    </div>
    <div
      class="rc-tabs__content"
    >
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        1
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: none;"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs should render card type correctly 1`] = `
<div>
  <div
    class="rc-tabs rc-tabs--card"
  >
    <div
      class="rc-tabs__wrap"
    >
      <div
        class="rc-tabs__nav rc-tabs__nav--card"
        role="tablist"
        style="border-color: #ff0000;"
      >
        <div
          aria-selected="true"
          class="rc-tab rc-tab--active"
          style="border-color: #ff0000; background-color: rgb(255, 0, 0);"
        >
          <div
            class="rc-badge__wrapper"
          >
            <span
              class="rc-tab__text rc-tab__text--ellipsis"
            />
            <div
              class="rc-badge rc-badge--top-right rc-badge--fixed"
            >
              1
            </div>
          </div>
        </div>
        <div
          aria-selected="false"
          class="rc-tab"
          style="border-color: #ff0000; color: rgb(255, 0, 0);"
        >
          <div
            class="rc-badge__wrapper"
          >
            <span
              class="rc-tab__text rc-tab__text--ellipsis"
            />
            <div
              class="rc-badge rc-badge--top-right rc-badge--dot rc-badge--fixed"
            />
          </div>
        </div>
        <div
          aria-selected="false"
          class="rc-tab"
          style="border-color: #ff0000; color: rgb(255, 0, 0);"
        >
          <span
            class="rc-tab__text rc-tab__text--ellipsis"
          >
            <h3>
              haha
            </h3>
          </span>
        </div>
        <div
          aria-selected="false"
          class="rc-tab"
          style="border-color: #ff0000; color: rgb(255, 0, 0);"
        >
          <span
            class="rc-tab__text rc-tab__text--ellipsis"
          >
            <h3>
              false
            </h3>
          </span>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs__content"
    >
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        1
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: none;"
      />
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: none;"
      />
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: none;"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs should render correctly when lazy-render 1`] = `
<div
  class="rc-tabs__content"
>
  <div
    class="rc-tab__pane"
    role="tabpanel"
    style="display: block;"
  >
    Tab
  </div>
  <div
    class="rc-tab__pane"
    role="tabpanel"
    style="display: none;"
  />
</div>
`;

exports[`Tabs should render correctly when lazy-render 2`] = `
<div
  class="rc-tabs__content"
>
  <div
    class="rc-tab__pane"
    role="tabpanel"
    style="display: block;"
  >
    Tab
  </div>
  <div
    class="rc-tab__pane"
    role="tabpanel"
    style="display: none;"
  >
    Tab
  </div>
</div>
`;

exports[`Tabs should render correctly when set scrollspy prop 1`] = `
<div>
  <div
    class="test-rab"
  >
    <div
      class="rc-tabs rc-tabs--line"
    >
      <div>
        <div
          class="rc-sticky"
        >
          <div
            class="rc-tabs__wrap"
          >
            <div
              class="rc-tabs__nav rc-tabs__nav--line"
              role="tablist"
            >
              <div
                aria-selected="true"
                class="rc-tab rc-tab--active"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title0
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-tab"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title1
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-tab"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title2
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-tab"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title3
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-tab"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title4
                </span>
              </div>
              <div
                class="rc-tabs__line"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="rc-tabs__content"
      >
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            0
          </div>
        </div>
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            1
          </div>
        </div>
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            2
          </div>
        </div>
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            3
          </div>
        </div>
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            4
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs should render correctly when set scrollspy prop 2`] = `
<div>
  <div
    class="test-rab"
  >
    <div
      class="rc-tabs rc-tabs--line"
    >
      <div>
        <div
          class="rc-sticky"
        >
          <div
            class="rc-tabs__wrap"
          >
            <div
              class="rc-tabs__nav rc-tabs__nav--line"
              role="tablist"
            >
              <div
                aria-selected="false"
                class="rc-tab"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title0
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-tab"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title1
                </span>
              </div>
              <div
                aria-selected="true"
                class="rc-tab rc-tab--active"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title2
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-tab"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title3
                </span>
              </div>
              <div
                aria-selected="false"
                class="rc-tab"
              >
                <span
                  class="rc-tab__text rc-tab__text--ellipsis"
                >
                  title4
                </span>
              </div>
              <div
                class="rc-tabs__line"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="rc-tabs__content"
      >
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            0
          </div>
        </div>
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            1
          </div>
        </div>
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            2
          </div>
        </div>
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            3
          </div>
        </div>
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          <div
            style="height: 80px;"
          >
            内容 
            4
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs test with testing library should render correctly after inserting a tab 1`] = `
<div>
  <div
    class="rc-tabs rc-tabs--line"
  >
    <div>
      <div
        class="rc-sticky"
      >
        <div
          class="rc-tabs__wrap"
        >
          <div
            class="rc-tabs__nav rc-tabs__nav--line"
            role="tablist"
          >
            <div
              aria-selected="true"
              class="rc-tab rc-tab--active"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                title1
              </span>
            </div>
            <div
              aria-selected="false"
              class="rc-tab"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                title3
              </span>
            </div>
            <div
              class="rc-tabs__line"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs__content"
    >
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        Tab
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        Tab
      </div>
    </div>
  </div>
  <button
    data-testid="button-change"
    type="button"
  >
    ChangeInsert
  </button>
</div>
`;

exports[`Tabs test with testing library should render correctly after inserting a tab 2`] = `
<div>
  <div
    class="rc-tabs rc-tabs--line"
  >
    <div>
      <div
        class="rc-sticky"
      >
        <div
          class="rc-tabs__wrap"
        >
          <div
            class="rc-tabs__nav rc-tabs__nav--line"
            role="tablist"
          >
            <div
              aria-selected="true"
              class="rc-tab rc-tab--active"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                title1
              </span>
            </div>
            <div
              aria-selected="false"
              class="rc-tab"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              />
            </div>
            <div
              aria-selected="false"
              class="rc-tab"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                title3
              </span>
            </div>
            <div
              class="rc-tabs__line"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs__content"
    >
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        Tab
      </div>
      <div
        index="1"
      >
        <div
          class="rc-tab__pane"
          role="tabpanel"
          style="display: block;"
        >
          Tab
        </div>
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        Tab
      </div>
    </div>
  </div>
  <button
    data-testid="button-change"
    type="button"
  >
    ChangeInsert
  </button>
</div>
`;

exports[`Tabs test with testing library should render correctly when set sticky prop 1`] = `
<div>
  <div
    class="rc-tabs rc-tabs--line"
  >
    <div>
      <div
        class="rc-sticky"
      >
        <div
          class="rc-tabs__wrap"
        >
          <div
            class="rc-tabs__nav rc-tabs__nav--line"
            role="tablist"
          >
            <div
              aria-selected="false"
              class="rc-tab"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                1
              </span>
            </div>
            <div
              aria-selected="false"
              class="rc-tab rc-tab--disabled"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                2
              </span>
            </div>
            <div
              aria-selected="true"
              class="rc-tab rc-tab--active"
            >
              <span
                class="rc-tab__text rc-tab__text--ellipsis"
              >
                3
              </span>
            </div>
            <div
              class="rc-tabs__line"
              style="transform: translateX(0px) translateX(-50%); transition-duration: 300ms; height: 5px; border-radius: 5px;"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-tabs__content"
    >
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        content1
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        content2
      </div>
      <div
        class="rc-tab__pane"
        role="tabpanel"
        style="display: block;"
      >
        content3
      </div>
    </div>
  </div>
</div>
`;
